--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,15 +1,13 @@
-.container {
-  padding: 0 2rem;
-}
-
 .main {
   min-height: 100vh;
+  width: 100vw;
   padding: 4rem 0;
-  flex: 1;
+  position: absolute;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  z-index: 10;
 }
 
 .footer {
